Fix - Sample for MVC3 not showing home page on one screen

--- a/source/Glimpse.Mvc3.MusicStore.Sample/Content/Site.css
+++ b/source/Glimpse.Mvc3.MusicStore.Sample/Content/Site.css
@@ -16,6 +16,7 @@ body
 #container
 {
 	float: left;
+	width: 100%;
 }
 
 #header
